--- a/templates/main.html
+++ b/templates/main.html
@@ -357,7 +357,7 @@
 
     <div style="display:flex; justify-content:space-between; margin-top:10px;">
         <div>Total Value: <strong>$250</strong></div>
-        <button class="deposit-btn">+Deposit</button>
+        <button class="action-btn deposit">+Deposit</button>
     </div>
 
     <div class="inventory-grid">
@@ -369,7 +369,7 @@
     </div>
 
     <div style="text-align:right; margin-top:12px;">
-        <button class="withdraw-btn">Withdraw</button>
+        <button class="action-btn withdraw">Withdraw</button>
     </div>
 </div>
 </div>
