--- a/templates/main.html
+++ b/templates/main.html
@@ -420,6 +420,16 @@
     </div>
 </div>
 </div>
+
+<script>
+document.querySelectorAll('.inventory-item').forEach(item => {
+    item.addEventListener('click', e => {
+        e.stopPropagation();
+        item.classList.toggle('selected');
+    });
+});
+</script>
+
     
 <script>
     const wrapper = document.querySelector('.balance-wrapper');
