--- a/templates/main.html
+++ b/templates/main.html
@@ -304,7 +304,11 @@
             color: #fff;
         }
 
-
+        .inventory-item.selected .select-box {
+            background: #16a34a;
+            border-color: #16a34a;
+        }
+        
         .inventory-item.selected {
             outline: 2px solid #16a34a;
         }
@@ -603,5 +607,7 @@ document.querySelectorAll('.inventory-item').forEach(item => {
 
 </body>
 </html>
+
+
 
 
