--- a/templates/main.html
+++ b/templates/main.html
@@ -288,31 +288,14 @@
             font-size: 0.6rem;
         }
 
-        .select-box {
-            position: absolute;
-            top: 4px;
-            right: 4px;
-            width: 14px;
-            height: 14px;
-            border: 1px solid #64748b;
-            border-radius: 3px;
-            background: transparent;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 10px;
-            color: #fff;
-        }
-
-        .inventory-item.selected .select-box {
-            background: #16a34a;
-            border-color: #16a34a;
+        .inventory-item {
+            cursor: pointer;
         }
         
         .inventory-item.selected {
             outline: 2px solid #16a34a;
+            outline-offset: 1px;
         }
-        
         .inventory-item .name { font-weight: 500; }
         .inventory-item .price { color: #16a34a; font-weight: 600; }
     </style>
