--- a/templates/main.html
+++ b/templates/main.html
@@ -531,7 +531,11 @@ document.addEventListener('DOMContentLoaded', () => {
         inventoryModal?.classList.add('open');
     });
 
-    closeInventoryBtn?.addEventListener('click', () => inventoryModal?.classList.remove('open'));
+    closeInventoryBtn?.addEventListener('click', () =>
+        console.log("e");
+        inventoryModal?.classList.remove('open')
+    );
+    
     inventoryModal?.addEventListener('click', e => { if (e.target === inventoryModal) inventoryModal.classList.remove('open'); });
 
     sortBtn?.addEventListener('click', e => {
@@ -562,7 +566,10 @@ document.addEventListener('DOMContentLoaded', () => {
         inventoryActionModal?.classList.add('open');
     }
 
-    closeInventoryActionBtn?.addEventListener('click', () => inventoryActionModal?.classList.remove('open'));
+    closeInventoryActionBtn?.addEventListener('click', () =>
+        console.log("ee");
+        inventoryActionModal?.classList.remove('open'))
+    );
     inventoryActionModal?.addEventListener('click', e => { if (e.target === inventoryActionModal) inventoryActionModal.classList.remove('open'); });
 
     const currentPath = window.location.pathname;
